# sketchup-mcp

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sketchup.json  su_mcp.rb
.github/workflows/: release-verification.yml  sketchup-runtime.yml  verification.yml
docs/: architecture-review-20260720.html  command-catalog.md
docs/adr/: 0001-local-one-request-bridge-lifecycle.md
docs/agents/: domain.md  issue-tracker.md
docs/testing/: sketchup-testup.md  verification.md
examples/: README.md  arts_and_crafts_cabinet.py  behavior_tester.py  get_selection.py  simple_test.py
scripts/: build.py  check_python_distribution.py  extension_package.py  install_acceptance.py  ruby_coverage.rb  run_python_coverage_tests.py  sketchup_runtime_evidence.py  sketchup_runtime_runner.py  test_python_coverage.sh  trusted_release.py  verify.py
src/sketchup_mcp/: __init__.py  _version.py  bridge.py  catalog_fastmcp.py  command_catalog.json  command_catalog.py  command_docs.py  command_parity.py  mcp_server.py  server.py
su_mcp/: bridge_listener.rb  bridge_protocol.rb  command_catalog.rb  command_dispatcher.rb  command_execution_error.rb  command_executor.rb  extension.json  extension_runtime.rb  main.rb  package.rb  package_contract.rb  sketchup_commands.rb  socket_transport.rb  su_mcp.rb  version.rb
su_mcp/su_mcp/: bridge_listener.rb  bridge_runtime.rb  command_catalog.rb  command_dispatcher.rb  command_executor.rb  command_response_builder.rb  eval_result.rb  extension_menu.rb  main.rb  sketchup_adapter.rb  sketchup_commands.rb
test/: README.md  bridge_listener_controlled_test.rb  bridge_listener_test.rb  bridge_protocol_headless_test.rb  bridge_runtime_headless_test.rb  bridge_runtime_test.rb  command_catalog_headless_test.rb  command_catalog_test.rb  command_dispatcher_headless_test.rb  command_dispatcher_test.rb  command_executor_logging_test.rb  command_response_builder_test.rb  complete_command_contract_test.rb  create_component_contract_test.rb  eval_ruby_contract_test.rb  export_sandbox_test.rb  extension_menu_test.rb  extension_runtime_test.rb  geometry_dimensions_test.rb  headless.rb  joinery_eval_adapter_test.rb  joinery_eval_contract_test.rb  joinery_geometry_composition_test.rb  package_contract_test.rb  ruby_coverage_gate_test.rb  scene_geometry_composition_test.rb  scene_geometry_contract_test.rb  sketchup_adapter_headless_test.rb  sketchup_adapter_test.rb  sketchup_commands_test.rb
test/fixtures/: create_component_contract.json  joinery_eval_contract.json  ruby_bridge_fixture.rb  ruby_command_contract_fixture.rb  scene_geometry_contract.json
test/support/: controlled_bridge.rb
tests/: test_bridge_lifecycle.py  test_command_catalog.py  test_command_catalog_coverage.py  test_command_tooling_coverage.py  test_contributor_workflow.py  test_coverage_gate.py  test_examples.py  test_extension_package.py  test_install_acceptance.py  test_manual_sketchup_suite.py  test_python_bridge_coverage.py  test_python_distribution.py  test_python_entrypoints_coverage.py  test_python_runtime.py  test_readme_setup.py  test_repository_cleanup.py  test_runtime_roles.py  test_sketchup_runtime_evidence.py  test_sketchup_runtime_runner.py  test_verification_contracts.py  test_verification_local.py  test_verification_release.py
testup/install_acceptance/: evidence.schema.json  startup.rb
testup/production_adapter/: TC_ProductionAdapter.rb  controlled_adapters.rb  evidence.schema.json  export_sandbox.rb  suite_manifest.json  support.rb
