[project]
name = "sketchup-mcp"
version = "0.1.17"
description = "Sketchup integration through Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.28.1,<2"
]

[project.urls]
Homepage = "https://github.com/yourusername/sketchup-mcp"
Issues = "https://github.com/yourusername/sketchup-mcp/issues"

[project.scripts]
sketchup-mcp = "sketchup_mcp.mcp_server:main"

[project.entry-points.mcp]
sketchup = "sketchup_mcp.mcp_server:mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
sketchup_mcp = ["command_catalog.json"]
