[project]
name = "sketchup-mcp"
dynamic = ["version"]
description = "SketchUp integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Coral Garden"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "mcp[cli]>=1.28.1,<2"
]

[dependency-groups]
test = [
    "coverage[toml]==7.10.7",
]
build = [
    "setuptools==80.9.0",
    "wheel==0.45.1",
]

[project.urls]
Homepage = "https://github.com/coral-garden/sketchup-mcp"
Repository = "https://github.com/coral-garden/sketchup-mcp"
Issues = "https://github.com/coral-garden/sketchup-mcp/issues"
Documentation = "https://github.com/coral-garden/sketchup-mcp#readme"

[project.scripts]
sketchup-mcp = "sketchup_mcp.mcp_server:main"

[project.entry-points.mcp]
sketchup = "sketchup_mcp.mcp_server:mcp"

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.package-data]
sketchup_mcp = ["command_catalog.json"]

[tool.coverage.run]
branch = true
source = ["src/sketchup_mcp"]

[tool.coverage.report]
fail_under = 100
show_missing = true
